# PBProblemStudy-B1ueDR4G0N

./: .gitignore  .gitmodules  README.md  THIRD_PARTY.md  Usage.md  result.var
GUROBI/: README.md  pb_gurobi.py
LOG/: gurobi_maxcut_5partite_n27.var  naps_clique_coloring_n5_t3.var  rc2_vertex_cover_grid_dim072.var  roundingsat_knapsack_subset_sum_200.var  scip_miplib_lp4l.var
MAXSAT/: README.md  pb_rc2.py
SCIP/: CMakeLists.txt  README.md  pb_scip.cpp
SCIP/local/include/scip/: config.h
SCIP/local/include/soplex/: config.h
SCIP/local/lib/: libsoplexshared.so.7.1.6.0
SCIP/local/lib/cmake/scip/: scip-config-version.cmake
SCIP/local/lib/cmake/soplex/: soplex-config.cmake  soplex-targets.cmake
problems/: README.md
problems/compare/: README.md  naps_favored_clique_coloring.opb  scip_favored_bitvector_equalities.opb
problems/dec/: subsetcard_eq_random4reg_10.opb
problems/gurobi_scip/: README.md  clique_coloring_n8_t6.opb  knapsack_subset_sum_200.opb  maxcut_5partite_n27.opb  miplib_air01_dec.opb  miplib_lp4l.opb
problems/opt/: clique_coloring_n6_t4.opb
problems/pbs_extra/: README.md  bitvector_12array_alg_ineq10.opb  sumineq_arity5_p005_shuf2.opb  vertex_cover_grid6_07_shuf3.opb
problems/sample/: README.md  sample_pbo.opb  sample_pbs.opb
results/: README.md
results/gurobi_scip/: README.md  problems.txt
results/naps_fastest/: README.md
results/pbs_pbo/: README.md
results/rankings/: README.md  rankings.csv
results/sixty_sec/: README.md
runsolver/src/: runsolver
scripts/: init_third_party.sh
